--- a/client/listling.css
+++ b/client/listling.css
@@ -2,4 +2,11 @@ html {
     --micro-color-primary: #4d8dd9;
     --micro-color-primary-shade: #225ca0;
     --micro-color-secondary: #d94b1f;
+    --micro-color-mono-shade: #616161;
+}
+
+.listling-detail {
+    color: var(--micro-color-text-subtle);
+    font-size: 0.875em;
+    text-align: right;
 }
