Bring dependencies up-to-date
Includes micro 0.18 (bringing Font Awesome 5), Pylint 2, Mocha 5, and ESLint 5. Also update
boilerplate and piggyback more distinct item headings.

--- a/client/listling.css
+++ b/client/listling.css
@@ -1,4 +1,5 @@
 html {
+    --micro-color-text-title: #223144;
     --micro-color-primary: #4d8dd9;
     --micro-color-primary-shade: #225ca0;
     --micro-color-primary-tint: #8fb7e7;
