--- a/client/listling/components/start.html
+++ b/client/listling/components/start.html
@@ -1,83 +1,100 @@
 <template id="listling-start-page-template">
-    <h1>Your lists</h1>
+    <section>
+        <h1>Your lists</h1>
 
-    <div class="listling-start-lists micro-entity-list">
-        <ul data-content="list lists.items 'lst'">
-            <template>
-                <li
-                    class="micro-panel micro-quick-nav" tabindex="0" data-onkeydown="onKeyDown"
-                    data-shortcut-context="new ShortcutContext"
-                >
-                    <a class="link micro-panel-main" data-href="makeListURL lst">
-                        <span data-content="lst.title"></span>
-                        <small>
-                            <span
-                                data-content="formatPlural '{n} item' '{n} items' 'n' lst.items.count"
-                            ></span>
-                            <span data-content="switch lst.authors.0.id user.id">
-                                <template>· <i class="fa fa-user-cog"></i> Owner</template>
-                            </span>
-                        </small>
-                    </a>
-                    <ul
-                        is="micro-menu" class="micro-secondary"
-                        data-content="switch lst.authors.0.id user.id"
+        <div class="listling-start-lists micro-entity-list">
+            <ul data-content="list lists.items 'lst'">
+                <template>
+                    <li
+                        class="micro-panel micro-quick-nav" tabindex="0" data-onkeydown="onKeyDown"
+                        data-shortcut-context="new ShortcutContext"
                     >
-                        <template></template>
-                        <template>
-                            <li>
-                                <button class="link"><i class="fa fa-fw fa-bars"></i></button>
-                                <ul is="micro-menu">
-                                    <li class="micro-panel">
-                                        <button
-                                            is="micro-button" class="action"
-                                            data-run="bind remove lst"
-                                            data-shortcut="new Shortcut 'T'"
-                                        >
-                                            <i class="fa fa-fw fa-minus-circle"></i> Remove from
-                                            your lists
-                                        </button>
-                                    </li>
-                                </ul>
-                            </li>
-                        </template>
-                    </ul>
-                </li>
-            </template>
-        </ul>
-        <ul>
-            <li class="micro-panel">
-                <ul is="micro-menu" class="listling-start-create micro-secondary micro-panel-main">
-                    <li>
-                        <button is="micro-button" class="action" data-shortcut="new Shortcut 'A'">
-                            <i class="fa fa-fw fa-plus-circle"></i> Create new list
-                        </button>
-                        <ul is="micro-menu" data-content="list useCases 'useCase'">
+                        <a class="link micro-panel-main" data-href="makeListURL lst">
+                            <span data-content="lst.title"></span>
+                            <small>
+                                <span
+                                    data-content="formatPlural '{n} item' '{n} items' 'n' lst.items.count"
+                                ></span>
+                                <span data-content="switch lst.authors.0.id user.id">
+                                    <template>· <i class="fa fa-user-cog"></i> Owner</template>
+                                </span>
+                            </small>
+                        </a>
+                        <ul
+                            is="micro-menu" class="micro-secondary"
+                            data-content="switch lst.authors.0.id user.id"
+                        >
+                            <template></template>
                             <template>
-                                <li
-                                    class="micro-panel"
-                                    data-onmousedown="bind createList useCase.id"
-                                >
-                                    <p>
-                                        <i
-                                            data-class-name="format 'fa fa-fw fa-{icon}' 'icon' useCase.icon"
-                                        ></i>
-                                        <span data-content="useCase.title"></span>
-                                    </p>
+                                <li>
+                                    <button class="link"><i class="fa fa-fw fa-bars"></i></button>
+                                    <ul is="micro-menu">
+                                        <li class="micro-panel">
+                                            <button
+                                                is="micro-button" class="action"
+                                                data-run="bind remove lst"
+                                                data-shortcut="new Shortcut 'T'"
+                                            >
+                                                <i class="fa fa-fw fa-minus-circle"></i> Remove from
+                                                your lists
+                                            </button>
+                                        </li>
+                                    </ul>
                                 </li>
                             </template>
                         </ul>
                     </li>
-                </ul>
-            </li>
-        </ul>
-    </div>
+                </template>
+            </ul>
+            <ul>
+                <li class="micro-panel" data-content="switch listsComplete false">
+                    <template>
+                        <button
+                            is="micro-button" class="link micro-panel-main"
+                            data-run="bind fetchCollection lists" data-shortcut="new Shortcut 'M'"
+                        >
+                            <i class="fa fa-fw fa-ellipsis-v"></i> More
+                        </button>
+                    </template>
+                </li>
+                <li class="micro-panel">
+                    <ul
+                        is="micro-menu"
+                        class="listling-start-create micro-secondary micro-panel-main"
+                    >
+                        <li>
+                            <button
+                                is="micro-button" class="action" data-shortcut="new Shortcut 'A'"
+                            >
+                                <i class="fa fa-fw fa-plus-circle"></i> Create new list
+                            </button>
+                            <ul is="micro-menu" data-content="list useCases 'useCase'">
+                                <template>
+                                    <li
+                                        class="micro-panel"
+                                        data-onmousedown="bind createList useCase.id"
+                                    >
+                                        <p>
+                                            <i
+                                                data-class-name="format 'fa fa-fw fa-{icon}' 'icon' useCase.icon"
+                                            ></i>
+                                            <span data-content="useCase.title"></span>
+                                        </p>
+                                    </li>
+                                </template>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
 
-    <p class="micro-small">
-        Need inspiration? View some
-        <a class="link" href="/intro" data-shortcut="new Shortcut 'E'">
-            <i class="fa fa-book"></i> Examples</a>!
-    </p>
+        <p class="micro-small">
+            Need inspiration? View some
+            <a class="link" href="/intro" data-shortcut="new Shortcut 'E'">
+                <i class="fa fa-book"></i> Examples</a>!
+        </p>
+    </section>
 </template>
 
 <style>
