--- a/micro/client/micro.css
+++ b/micro/client/micro.css
@@ -341,6 +341,11 @@ textarea {
 
 label {
     display: block;
+    margin: 1.5rem 0;
+}
+
+fieldset > label {
+    margin: 0;
 }
 
 h1 > label {
@@ -354,10 +359,6 @@ label > small {
 
 label > small:first-of-type {
     color: inherit;
-}
-
-form > label {
-    margin: 1.5rem 0;
 }
 
 .compact form > label {
