--- a/client/listling/components/start.html
+++ b/client/listling/components/start.html
@@ -6,8 +6,8 @@
             <ul data-content="list lists.items 'lst'">
                 <template>
                     <li
-                        class="micro-panel micro-quick-nav" tabindex="0" data-onkeydown="onKeyDown"
-                        data-shortcut-context="new ShortcutContext"
+                        class="micro-panel micro-quick-nav" tabindex="0"
+                        data-onkeydown="onListKeyDown" data-shortcut-context="new ShortcutContext"
                     >
                         <a class="link micro-panel-main" data-href="makeListURL lst">
                             <span data-content="lst.title"></span>
@@ -50,7 +50,7 @@
                 <li class="micro-panel" data-content="switch listsComplete false">
                     <template>
                         <button
-                            is="micro-button" class="link micro-panel-main"
+                            is="micro-button" class="link micro-panel-main micro-quick-nav"
                             data-run="bind fetchCollection lists" data-shortcut="new Shortcut 'M'"
                         >
                             <i class="fa fa-fw fa-ellipsis-v"></i> More
@@ -58,23 +58,21 @@
                     </template>
                 </li>
                 <li class="micro-panel">
-                    <ul
-                        is="micro-menu"
-                        class="listling-start-create micro-secondary micro-panel-main"
-                    >
+                    <ul is="micro-menu" class="listling-start-create">
                         <li>
                             <button
-                                is="micro-button" class="action" data-shortcut="new Shortcut 'A'"
+                                is="micro-button" class="action micro-highlight"
+                                data-run="startCreateList" data-shortcut="new Shortcut 'A'"
                             >
                                 <i class="fa fa-fw fa-plus-circle"></i> Create new list
                             </button>
                             <ul is="micro-menu" data-content="list useCases 'useCase'">
                                 <template>
-                                    <li
-                                        class="micro-panel"
-                                        data-onmousedown="bind createList useCase.id"
-                                    >
-                                        <p>
+                                    <li>
+                                        <p
+                                            tabindex="0" data-onclick="bind createList useCase.id"
+                                            data-onkeydown="onUseCaseKeyDown"
+                                        >
                                             <i
                                                 data-class-name="format 'fa fa-fw fa-{icon}' 'icon' useCase.icon"
                                             ></i>
@@ -89,22 +87,16 @@
             </ul>
         </div>
 
-        <p class="micro-small">
-            Need inspiration? View some
-            <a class="link" href="/intro" data-shortcut="new Shortcut 'E'">
-                <i class="fa fa-book"></i> Examples</a>!
-        </p>
+        <a class="link micro-small" href="/intro" data-shortcut="new Shortcut 'E'">
+            <small>Need inspiration?</small>
+            <i class="fa fa-book"></i> View examples
+        </a>
     </section>
 </template>
 
 <style>
     .listling-start-create > li {
         flex: auto;
-    }
-
-    .listling-start-create button {
-        width: 100%;
-        font-weight: bold;
     }
 
     .listling-start-create [is=micro-menu] {
