Add Item value UI
Show value (with unit) for items and make it editable. Add value feature toggle and dependent value
unit input. Separate the features fieldset.

Close #89.

--- a/client/listling.css
+++ b/client/listling.css
@@ -12,3 +12,19 @@ html {
     font-size: 0.875em;
     text-align: right;
 }
+
+label.micro-block {
+    margin: var(--micro-size-s) 0;
+}
+
+dt {
+    text-align: center;
+}
+
+label > small:first-of-type {
+    padding-top: 0;
+}
+
+.micro-disabled {
+    color: var(--micro-color-text-subtle);
+}
