Add List owners
Implement Owners with grant(), revoke() and OwnersEvent and add List.owners.
Make list creator the default owner. Check permissions with owners. Show list
owners and render OwnersEvent notifications.

Also set context user in unit tests and use context user in touched code.

Close #94.

--- a/client/listling/components/start.html
+++ b/client/listling/components/start.html
@@ -15,12 +15,12 @@
                                 <span
                                     data-content="formatPlural '{n} item' '{n} items' 'n' lst.items.count"
                                 ></span>
-                                <span data-content="switch lst.authors.0.id user.id">
+                                <span data-content="switch lst.owners.user_owner">
                                     <template>· <i class="fa fa-user-cog"></i> Owner</template>
                                 </span>
                             </small>
                         </a>
-                        <div data-content="switch lst.authors.0.id user.id">
+                        <div data-content="switch lst.owners.user_owner">
                             <template></template>
                             <template>
                                 <button class="link"><i class="fa fa-bars"></i></button>
