--- a/client/listling/components/share.html
+++ b/client/listling/components/share.html
@@ -24,8 +24,8 @@
                 <template>
                     <li class="micro-panel">
                         <button
-                            is="micro-button" class="link micro-panel-main micro-quick-nav"
-                            data-run="bind fetchCollection lists 10"
+                            type="button" class="link micro-panel-main micro-quick-nav"
+                            data-action="new Action bind fetchCollection lists 10"
                         >
                             <i class="fa fa-ellipsis-v"></i> More
                         </button>
