Show list value summary
Show and update List.value_summary_ids.

Also apply .micro-card to listling-list-page and stop all event listeners when buffering events.

Close #106.

--- a/client/listling.css
+++ b/client/listling.css
@@ -12,3 +12,9 @@ html {
     font-size: 0.875em;
     text-align: right;
 }
+
+/** Card: Distinct unit of related content. */
+
+.micro-card {
+    margin: var(--micro-size-s) 0;
+}
